--- a/style.css
+++ b/style.css
@@ -6,10 +6,14 @@
     box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5. h6,span {
+h1, h2, h3, h4, h5, h6, span {
     color: #242424;
     text-align: center;
     line-height: 1.25;
+}
+
+h1 {
+   font-size: 36px; 
 }
 
 p {
@@ -19,6 +23,24 @@ p {
 
 li {
     list-style: none;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-1{
+    flex: 1;
+}
+
+.row {
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.text--pink {
+color: #e031ac;
 }
 
 /*NAVIGATION BAR*/
@@ -61,4 +83,48 @@ transition: all 300ms ease;
     color: #db1f8d;
     margin: 0 12px;
     font-weight: bold;
+}
+
+/* ABOUT ME */
+
+#about-me{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.about-me__info--container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 500px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.about-me__info--mask {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 0 18px 16px rgba(0, 0, 0, 0.16);
+    margin-bottom: 28px;
+}
+
+.about-me__picture {
+    width: 100%;
+
+    /* Improving my own picture*/
+    transform: scale(1.5);
+    padding-top: 8px;
+}
+
+.about-me__info--title{
+margin-bottom: 16px;
+}
+
+.about-me__info--para{
+font-size: 20px;
+margin-bottom: 28px;
 }
